# Michael-Rodion

./: IHaveReturnedMyFriends.html  MyFail.cpp  Read_me_K  a.out  main.py  maxim.py  reb.cpp  rebase.py  test.py  test.txt  test2.py  test_my_token
task2/: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt
task2/A/: CMakeLists.txt  preparing.py
task2/B/: .lib.cpp.swp  lib.cpp
task2/C/: .main.h.swp  CMakeLists.txt  MyTests.cpp  main.cpp  main_test.cpp
